# ai-gpu-energy-optimizer-

./: .dockerignore  .env.example  .env.local  .env.production.example  .gitignore  ARCHITECTURE.md  BENCHMARK_REPORT.md  CEI_RESULTS_T4.md  CEI_SPECIFICATION.md  CLAUDE.md  Contexts  Controller.py  Dockerfile  EnergyChart.tsx  FINAL_REPORT.md  H100 LOAD RAMP TEST RESULTS  H100_TEST_1_IDLE_BASELINE.md  H100_TEST_2_GHOST_POWER.md  H100_benchmark.py:  LICENSE  LICENSE.md  NOTICE.md  NotificationContext.tsx  Procfile  README.md  Readme.md  Results.md  Run_pop_tests.sh  SECURITY.md  WHITEPAPER.md  a100_all_tests.json  all_content.txt  all_files.txt  all_test_results.json  app.py  config.json  db_init.py  docker-compose.timescale.yml  docker-compose.yml  funding.json  (+49 more)
ai-engine/: CORE_ENGINE.md  Dockerfile  __init__.py  agent_requirements.txt  config.json  database.py  engine1_efficiency.py  engine2_idle.py  engine3_burst.py  engine4-sampling.py  engine5_alerts.py  engine6_export.py  engine7_powerstate.py  engine8_delta.py  generate_credentials.py  gpu_monitor_agent.py  install.sh  main.py  main.py';;  main_simple.py  metrics_simulator.py  optimizer.py  pyproject.toml  requirements.txt  test.py
ai-engine/data/: dashboard-summary.json
ai-engine/data/tests/: repo_structure.txt
ai-engine/data/tests/a100/test-01_idle_baseline/: data.csv  evidence.json  summary.json
ai-engine/data/tests/a100/test-02_ghost_power_test/: data.csv  summary.json
ai-engine/data/tests/a100/test-03_sampling_rate_test/: summary.json
ai-engine/data/tests/a100_pcie/: a100_pcie_10min.csv
(+637 files in other folders)
